# ecode-py

./: .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py
ecode/: __init__.py  ecode.py  ecode_decoder.py  ecode_encoder.py
scripts/: publish-pypi.sh
src/ecode/: __init__.py  ecode.py  ecode_encoder.py
tests/: ecode_align_test.py  ecode_decoder_test.py  ecode_ecode_test.py  ecode_encoder_test.py  ecode_flag_test.py  ecode_locale_test.py  ecode_test.py  test_ecode.py  test_ecode_decoder.py  test_ecode_encoder.py  test_ecode_flag.py  test_ecode_fmt.py  test_ecode_locale.py  test_ecode_size.py
