[tool.poetry]
name = "ecode"
version = "0.1.5"
description = ""
license = "MIT"
authors = ["Emoji Generator <ultimate.emoji.gen@gmail.com>"]
maintainers = ["Emoji Generator <ultimate.emoji.gen@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/emoji-gen/ecode-py"
repository = "https://github.com/emoji-gen/ecode-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8.1"
pytest-pycodestyle = "^2.0.0"
pytest-pythonpath = "^0.7.3"
mypy = "^0.761"
twine = "^3.1.1"

[tool.poetry.urls]
"Issue tracker" = "https://github.com/emoji-gen/ecode-py/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
